Fix #151, WebKit scrollbar styling

--- a/src/style.css
+++ b/src/style.css
@@ -52,11 +52,13 @@ html {
 
 ::selection      { background: #f81; color: #fff }
 ::-moz-selection { background: #f81; color: #fff }
+
+::-webkit-scrollbar             { background: transparent }
 ::-webkit-scrollbar:vertical    { width: 4px }
 ::-webkit-scrollbar:horizontal  { height: 4px }
-::-webkit-scrollbar-track       { background: transparent}
-::-webkit-scrollbar-thumb       { background: #666 }
-::-webkit-scrollbar-thumb:hover { background: #333 }
+::-webkit-scrollbar-track       { background: transparent }
+::-webkit-scrollbar-thumb       { background: #ccc; border-radius: 2px }
+::-webkit-scrollbar-thumb:hover { background: #fff }
 
 input::-moz-placeholder                { color: #555; opacity: 1 }
 input:-ms-input-placeholder            { color: #555 }
